<resources>
    <string name="app_name">ApeEats</string>
    <string name="upload_image">upload Image</string>
    <string name="category">Category</string>
    <string name="delivery_available"> Delivery Available?</string>
    <string name="food_description">Food Description</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="add_food">Add Food</string>
    <string name="my_products1">My Products</string>
    <string name="deleted_items">Deleted Items</string>
    <string name="edit_history">edit History</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="whiskey_king_burger">Whiskey King Burger</string>
    <string name="burger_bun">Burger Bun</string>
    <string name="the_lola_burger">The Lola Burger</string>
    <string name="rice_pack">Rice Pack</string>
    <string name="butter_chicken_rice">Butter Chicken Rice</string>
    <string name="save">Save</string>
    <string name="change_restaurant_photo">Change Restaurant Photo</string>
    <string name="district">District</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="branches_available">Branches Available?</string>
    <string name="about">About</string>
    <string name="telephone">Telephone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="cancel">Cancel</string>
    <string name="change_profile_photo">Change Profile photo</string>
    <string name="name">Name *</string>
    <string name="phone_number">Phone Number *</string>
    <string name="date">Date</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="restaurant_gmail_com">restaurant.gmail.com</string>
    <string name="Restaurantname">Restaurantname</string>
    <string name="orders">Orders</string>
    <string name="foodbank">FoodBank</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="Email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="new_user_register_now">new_user_Register_Now</string>
    <string name="register">Register</string>
    <string name="view_all1">View All</string>
    <string name="myfoods">MyFoods</string>
    <string name="category1">Category</string>
    <string name="branch_1">Branch 1</string>
    <string name="branch_2">Branch 2</string>
    <string name="branch_3">Branch 3</string>
    <string name="my_products">My Products</string>
    <string name="view_all">View All</string>
    <string name="the_cream">The Cream</string>
    <string name="thecream_gmail_com">thecream.gmail.com</string>
    <string name="add_product">Add Product</string>
    <string name="add_offer">Add Offer</string>
    <string name="manage_order">Manage Order</string>
    <string name="deliver_status">Deliver Status</string>
    <string name="support_us">Support Us</string>
    <string name="feedback">Feedback</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="ape_eats">Ape Eats</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="selectdistrict">District</string>
    <string name="are_you_a_customer">Are You a Customer?</string>
    <string name="are_you_a_restaurant_owner">Are you a Restaurant Owner?</string>
    <string name="title_activity_res_map">Map</string>

</resources>