<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_addProduct"
            android:icon="@drawable/add_product"
            android:title="@string/add_product" />
        <item
            android:id="@+id/nav_addOffer"
            android:icon="@drawable/ic_offer"
            android:title="@string/add_offer" />
        <item
            android:id="@+id/nav_manageOrder"
            android:icon="@drawable/ic_manage_order"
            android:title="@string/manage_order" />
        <item
            android:id="@+id/nav_deliStatus"
            android:icon="@drawable/ic_bike_delivery"
            android:title="@string/deliver_status" />

    </group>

    <item android:title="@string/support_us">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_appRating"
                    android:icon="@drawable/ic_feedback"
                    android:title="@string/feedback" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_about_us"
                    android:title="@string/contact_us" />
                <item
                    android:id="@+id/nav_logOut"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>


</menu>